--- a/lab.ipynb
+++ b/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "19          10                  Versatile multi-port USB charger.       R20"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "19       R20  Overheats when charging multiple devices at once."
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
        "19  Overheats when charging multiple devices at once.  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
        "19  Overheats when charging multiple devices at once.  NEGATIVE  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_df.to_csv('s3://techcatalyst-public/Sriya/product_sentiment.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +916,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -976,9 +985,12 @@
     }
    ],
    "source": [
+    "s3 = boto3.client('s3', aws_access_key_id=aws_access_key, aws_secret_access_key=aws_secret_key,region_name='us-west-2')\n",
     "filename = 'sentiment_count_for_reviews.jpg'\n",
+    "# filename = 'cat.jpg'\n",
     "bucket_name = 'techcatalyst-public'\n",
-    "key = '/Sriya/sentiment_count_for_reviews.jpg'\n",
+    "key = 'Sriya/sentiment_count_for_reviews.jpg'\n",
+    "# key = 'Sriya/cat.jpg'\n",
     "\n",
     "s3.upload_file(filename, bucket_name, key)\n",
     "print(\"The file has been uploaded to the s3 bucket successfully\")"
@@ -986,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1299,7 @@
        "52         Wyoming"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1329,7 @@
        " 'resources/license-plates/license_plate9.jpeg']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1436,7 @@
        "9   resources/license-plates/license_plate9.jpeg"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1510,7 @@
        " 'Wyoming']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1640,7 @@
        "9   resources/license-plates/license_plate9.jpeg        Alabama"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1640,7 +1652,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_state_df.to_csv('s3://techcatalyst-public/Sriya/image_state.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1685,11 +1706,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file has been uploaded to the s3 bucket successfully\n"
+     ]
+    }
+   ],
    "source": [
+    "s3 = boto3.client('s3', aws_access_key_id=aws_access_key, aws_secret_access_key=aws_secret_key,region_name='us-west-2')\n",
+    "filename = 'num_license_plates_by_state.jpg'\n",
+    "# filename = 'cat.jpg'\n",
+    "bucket_name = 'techcatalyst-public'\n",
+    "key = 'Sriya/num_license_plates_by_state.jpg'\n",
+    "# key = 'Sriya/cat.jpg'\n",
     "\n",
+    "s3.upload_file(filename, bucket_name, key)\n",
+    "print(\"The file has been uploaded to the s3 bucket successfully\")\n",
     "\n",
     "        "
    ]
